--- a/app/globals.css
+++ b/app/globals.css
@@ -95,7 +95,6 @@ h1 {
   /* .btn-outline{
 
   } */
-
 }
 
 /* Slider */
@@ -103,19 +102,18 @@ h1 {
   position: relative;
   perspective: 1000px;
   transform-style: preserve-3d;
-  width: 362px;
-  height: 272px;
+  width: 472px;
+  height: 100%;
   margin: 0 auto;
 }
 
 .slide {
-  width: 362px;
-  height: 272px;
+  width: 472px;
   transition: transform 500ms ease 0s, opacity 500ms ease 0s,
     visibility 500ms ease 0s;
   position: absolute;
   top: 0;
-  border-radius: 12px;
+  border-radius: 24px;
 }
 
 /* 3D reflection effect */
@@ -129,38 +127,14 @@ h1 {
     visibility 500ms ease 0s;
 }
 
-.slide {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
 .sliderContent {
   display: flex;
   flex-direction: column;
   color: white;
-  padding: 30px;
   align-items: flex-start;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
-
-.sliderContent h2 {
-  margin: 16px 0;
-}
-.sliderContent p {
-  margin: 0;
-  margin-bottom: 16px;
-}
-
-/* normal css  */
-
-/* body {
-  width: 100vw;
-  min-height: 100vh;
-  overflow: hidden;
-  background: #111;
-} */
 
 .center {
   display: flex;
